Fix T62891: particle even distribution is not even.

CD_ORCO coordinates are stored normalized by convention, this code path did
not store them correctly.