source/blender/makesdna/DNA_customdata_types.h
@@ -108,7 +108,7 @@ typedef enum CustomDataType {
 	CD_PROP_INT         = 11,
 	CD_PROP_STR         = 12,
 	CD_ORIGSPACE        = 13,  /* for modifier stack face location mapping */
-	CD_ORCO             = 14,
+	CD_ORCO             = 14,  /* undeformed vertex coordinates, normalized to 0..1 range */
 /*	CD_MTEXPOLY         = 15, */  /* deprecated */
 	CD_MLOOPUV          = 16,
 	CD_MLOOPCOL         = 17,
